--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
       <div class="banner">🎉 여기에 배너 이미지 영역</div>
       <div class="reviews">
 <div class="review-slider">
-  <div class="review-slide"><img src="review1.png" alt="후기 1" /></div>
-  <div class="review-slide"><img src="review2.png" alt="후기 2" /></div>
-  <div class="review-slide"><img src="review3.png" alt="후기 3" /></div>
-  <div class="review-slide"><img src="review4.png" alt="후기 4" /></div>
-  <div class="review-slide"><img src="review5.png" alt="후기 5" /></div>
+  <div class="review-slide"><img src="review1.png.png" alt="후기 1" /></div>
+  <div class="review-slide"><img src="review2.png.png" alt="후기 2" /></div>
+  <div class="review-slide"><img src="review3.png.png" alt="후기 3" /></div>
+  <div class="review-slide"><img src="review4.png.png" alt="후기 4" /></div>
+  <div class="review-slide"><img src="review5.png.png" alt="후기 5" /></div>
 </div>
 <style>
 .review-slider {
