--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
       <input type="hidden" name="addons" id="addons" />
 
       <div class="banner">🎉 여기에 배너 이미지 영역</div>
-      <div class="reviews">
+ <img src="banner.jpg" alt="인터넷성지 배너" style="width: 100%; border-radius: 10px;" />
+      </div>
 <div class="review-slider">
   <div class="review-slide"><img src="review1.png.png" alt="후기 1" /></div>
   <div class="review-slide"><img src="review2.png.png" alt="후기 2" /></div>
