--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <input type="hidden" name="product" id="product" />
       <input type="hidden" name="addons" id="addons" />
 
-      <div class="banner">🎉 여기에 배너 이미지 영역</div>
+      <div class="banner">
  <img src="banner.jpg.png" alt="인터넷성지 배너" style="width: 100%; border-radius: 10px;" />
       </div>
 <div class="review-slider">
