--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
       <input type="hidden" name="product" id="product" />
       <input type="hidden" name="addons" id="addons" />
 
-      <div class="banner">
- <img src="banner.jpg.png" alt="인터넷성지 배너" style="width: 100%; border-radius: 10px;" />
-      </div>
+ <div class="banner">
+  <img src="banner.jpg.png" alt="인터넷성지 배너" style="width: 100%; height: auto; border-radius: 10px;" />
+</div>
 <div class="review-slider">
   <div class="review-slide"><img src="review1.png.png" alt="후기 1" /></div>
   <div class="review-slide"><img src="review2.png.png" alt="후기 2" /></div>
