--- a/index.html
+++ b/index.html
@@ -101,12 +101,15 @@
       display: block;
       margin-bottom: 6px;
     }
-    input[type=text], input[type=tel], select {
-      width: 100%;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
+input[type=text], input[type=tel], select {
+  width: 90%;
+  max-width: 400px;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  display: block;
+  margin: 0 auto;
+}
     .info-banner {
       background-color: #fff8e1;
       color: #ff6f00;
