--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>당일민족 상담 신청</title>
+  <title>당일민족 상당 신청</title>
   <style>
-    /* 생략 없이 전체 스타일 그대로 유지 */
+    /* 전체 스타일 그대로 유지 */
     body {
       font-family: 'Pretendard', sans-serif;
       background-color: #f9fbfd;
@@ -191,17 +191,17 @@
         <div class="review-slide"><img src="review5.png.png" alt="후기 5" /></div>
       </div>
 
-      <h2 style="font-size: 24px; font-weight: bold; text-align: center; margin-bottom: 10px; color: #0077c2;">💬 실시간 상담 현황</h2>
+      <h2 style="font-size: 24px; font-weight: bold; text-align: center; margin-bottom: 10px; color: #0077c2;">💬 실시간 상당 현황</h2>
       <div class="realtime">
         <div class="realtime-inner">
           <table>
             <thead>
-              <tr><th>접수일자</th><th>고객명</th><th>상품</th><th>진행상태</th></tr>
+              <tr><th>접수일자</th><th>고객명</th><th>상품</th><th>진행상황</th></tr>
             </thead>
             <tbody>
               <tr><td>2025-06-22</td><td>김**</td><td>인터넷+TV</td><td>✅ 개통완료</td></tr>
-              <tr><td>2025-06-22</td><td>이**</td><td>유심</td><td>📦 설치예약</td></tr>
-              <tr><td>2025-06-22</td><td>박**</td><td>CCTV</td><td>⏳ 상담중</td></tr>
+              <tr><td>2025-06-22</td><td>이**</td><td>유심</td><td>🚞 설치예약</td></tr>
+              <tr><td>2025-06-22</td><td>박**</td><td>CCTV</td><td>⏳ 상당중</td></tr>
             </tbody>
           </table>
         </div>
@@ -210,7 +210,7 @@
       <div class="section-title">Q. 통신사를 선택해주세요.</div>
       <div class="btn-group" id="carrier-group">
         <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
-        <button type="button">LG 헬로비전</button><button type="button">KT 스카이라이프</button>
+        <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
       </div>
 
       <div class="section-title">Q. 상품을 선택해주세요.</div>
@@ -237,11 +237,11 @@
         <input type="tel" id="phone" name="phone" placeholder="연락처를 입력해주세요" required/>
       </div>
 
-      <div class="info-banner">⏰ 24시간 연중무휴! 지금 접수하시면 바로 상담 연결됩니다.</div>
+      <div class="info-banner">⏰ 24시간 연중무후! 지금 접수하시면 바로 상당 연결됩니다.</div>
 
       <div class="form-field">
         <select name="time" required>
-          <option value="">상담시간 선택 (10시~22시)</option>
+          <option value="">상당시간 선택 (10시~22시)</option>
           <option>10시</option><option>11시</option><option>12시</option>
           <option>13시</option><option>14시</option><option>15시</option>
           <option>16시</option><option>17시</option><option>18시</option>
@@ -251,15 +251,15 @@
 
       <div class="privacy-box">
         <strong>개인정보 수집 및 이용 동의</strong><br/><br/>
-        - 수집 항목: 성함, 연락처, 상담 희망시간, 통신사, 상품정보<br/>
-        - 수집 목적: 서비스 상담 및 가입 안내 제공<br/>
+        - 수집 항목: 성함, 연락처, 상당 희망시간, 통신사, 상품정보<br/>
+        - 수집 목적: 서비스 상당 및 가입 안내 제공<br/>
         - 보유 및 이용기간: 수집일로부터 1년간 보관 후 파기<br/>
-        - 귀하는 개인정보 제공에 동의하지 않을 권리가 있으며, 미동의 시 서비스 이용에 제한이 있을 수 있습니다.
+        - 규한은 개인정보 제공에 동의하지 않을 권리가 있으며, 미동의 시 서비스 이용에 제한이 있을 수 있습니다.
       </div>
       <label><input type="checkbox" required> 위 내용을 모두 확인하였으며, 개인정보 수집 및 이용에 동의합니다.</label>
 
       <br><br>
-      <button class="submit-btn" type="submit">상담 신청하기</button>
+      <button class="submit-btn" type="submit">상당 신청하기</button>
     </form>
   </div>
 </body>
